Исправление начального положения мага

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ var getFireballSpeed=function(left) {
     return width / 2;
   }
   var getWizardY = function (height) {
-    return height - 90;
+    return height * 1/3;
   }
 </script>
 
