--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
   return 1.337 * wizardWidth;
   }
   var getWizardX = function (width) {
-    return width / 2;
+    return width * 1 / 2.2;
   }
   var getWizardY = function (height) {
     return height * 1/3;
