--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     return (width * 1 / 2) - (wizardWidth / 2);
   }
   var getWizardY = function (height) {
-    return height * 2/3;
+    return height * 1/3 - getWizardHeight();
   }
 </script>
 
