--- a/index.html
+++ b/index.html
@@ -192,10 +192,10 @@
   return 1.337 * wizardWidth;
   }
   var getWizardX = function (width) {
-    return (width * 1 / 2) - (wizardWidth / 2);
+    return width - (wizardWidth / 2);
   }
   var getWizardY = function (height) {
-    return height * 1/3 - getWizardHeight();
+    return height / 3 - getWizardHeight();
   }
 </script>
 
