--- a/index.html
+++ b/index.html
@@ -195,6 +195,8 @@
 
   <script src="js/util.js"></script>
 
+  <script src="js/backend.js"></script>
+
   <script src="js/setup.js"></script>
 
   <script src="js/dialog.js"></script>
