--- a/index.html
+++ b/index.html
@@ -197,6 +197,10 @@
 
   <script src="js/backend.js"></script>
 
+  <script src="js/debounce.js"></script>
+
+  <script src="js/sorting.js"></script>
+
   <script src="js/setup.js"></script>
 
   <script src="js/dialog.js"></script>
