--- a/index.html
+++ b/index.html
@@ -207,6 +207,8 @@
 
   <script src="js/wizard.js"></script>
 
+  <script src="js/avatar.js"></script>
+
   <script src="js/game.js"></script>
 
 </body>
